Added Continue Watching feature
In api I added ContinueWatching model, repository, service, and endpoints
In client I added ContinueWatchingItem and ContinueWatching components, ContinueWatchingService and IContinueWatching interface
Fixed refresh token bug due to simultaneous requests

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,21 @@
 html,
 body,
 #root {
-  background-color: #282c34;
-  color: white;
+  background-color: #282c34 !important;
+  color: white !important;
   height: 100%;
   margin: 0;
+}
+
+@media (prefers-color-scheme: dark) {
+  html,
+  body,
+  #root {
+    background-color: #282c34 !important;
+    color: white !important;
+    height: 100%;
+    margin: 0;
+  }
 }
 
 .media-page {
